Issue-1 Implement custom auth UI (#41)
* feat: Add custom auth UI - sign in page

feat: Create forgot password function

* refactor: Change register text to sign up

* refactor: Organize and reformat code to merge with master

* Create README.md

* chore: Enable all file types for sharing and add profile picture to search UI (#31)

* fix: Remove memory leak from UserRecyclerViewAdapter (#34)

* Issue-25 Add size limit to file sending (#35)

* feat: Add size limit to file sending

* refactor: Improve resource and exception handling

---------

Co-authored-by: KhiemNguyen15 <khiemsa15@gmail.com>

* feat: Display profile pictures on send page (#36)

* refactor: Reformat code

* Issue-5 Create settings page (#38)

* feat: Add custom UI to settings page and change password page

* Issue-2 Add backend integration (#10)

* feat: Create User and ShareRequest model classes

* feat: Create class to manage Firebase interactions

* chore: Create get/set methods for model classes

* feat: Create send file method for Firebase manager

* feat: Create download file method for Firebase manager
# Conflicts:
#	app/build.gradle.kts
#	app/src/main/java/com/github/skyfall/data/model/User.java
#	gradle/libs.versions.toml

* feat: Add custom UI to MainActivity

* Issue-3 Create send page (#13)

* feat: Add send users search user feature

* feat: Add functionality to search UI in SendActivity

* feat: Set up send file UI and functionality

* refactor: Reformat and organize code

---------

Co-authored-by: Faaizah Tas. Joita <faaizahtas.joita@macbookpro.utsarr.net>
Co-authored-by: Zachary Ohlenforst <zohlenforst@gmail.com>

* Issue-4 Create receive page (#14)

* feat: Create ReceiveActivty class

* feat: Create fetchRequests method

* feat:Create onDownloadRequest method for handling downloads

* feat:Create ShareRequestAdapter class

* feat:Create ShareRequestAdapter class

* feat: Create ShareRequestAdapter class

* feat: Add ShareRequestAdapter methods

* chore: Remove change activi