@@ -1,42 +1,28 @@
 package com.github.skyfall.ui.login;
 
-import static android.content.ContentValues.TAG;
-
 import android.content.Intent;
 import android.os.Bundle;
-import android.util.Log;
-import android.widget.Toast;
 
-import androidx.activity.result.ActivityResultLauncher;
 import androidx.appcompat.app.AppCompatActivity;
 
-import com.firebase.ui.auth.AuthMethodPickerLayout;
 import com.firebase.ui.auth.AuthUI;
-import com.firebase.ui.auth.ErrorCodes;
-import com.firebase.ui.auth.FirebaseAuthUIActivityResultContract;
-import com.firebase.ui.auth.IdpResponse;
-import com.firebase.ui.auth.data.model.FirebaseAuthUIAuthenticationResult;
+
 import com.github.skyfall.MainActivity;
 import com.github.skyfall.R;
 import com.google.firebase.FirebaseApp;
 import com.google.firebase.appcheck.FirebaseAppCheck;
 import com.google.firebase.appcheck.debug.DebugAppCheckProviderFactory;
-import com.google.firebase.appcheck.playintegrity.PlayIntegrityAppCheckProviderFactory;
 import com.google.firebase.auth.FirebaseAuth;
 
-import java.util.Arrays;
 import java.util.List;
-import java.util.Objects;
 
 public class FirebaseAuthActivity extends AppCompatActivity {
-    private final ActivityResultLauncher<Intent> signInLauncher = registerForActivityResult(
-            new FirebaseAuthUIActivityResultContract(),
-            this::onSignInResult);
+    private static final int RC_GOOGLE_SIGN_IN = 123;
 
     @Override
     protected void onCreate(Bundle savedInstanceState) {
         super.onCreate(savedInstanceState);
-        setContentView(R.layout.activity_firebase_auth);
+        setContentView(R.layout.custom_sign_in_layout);
 
         FirebaseApp.initializeApp(this);
         FirebaseAppCheck firebaseAppCheck = FirebaseAppCheck.getInstance();
@@ -49,54 +35,28 @@ public class FirebaseAuthActivity extends AppCompatActivity {
         firebaseAppCheck.installAppCheckProviderFactory(
                 DebugAppCheckProviderFactory.getInstance());
 
+        findViewById(R.id.email_button).setOnClickListener(v -> {
+            // Navigate to the email/password Login screen
+            startActivity(new Intent(this, LoginActivity.class));
+        });
+        findViewById(R.id.google_button).setOnClickListener(v -> launchGoogleSignIn());
+
         if (FirebaseAuth.getInstance().getCurrentUser() != null) {
             startActivity(new Intent(this, MainActivity.class));
             finish();
         }
-
-        startSignIn();
     }
 
-    public void startSignIn() {
-        AuthMethodPickerLayout customLayout = new AuthMethodPickerLayout
-                .Builder(R.layout.custom_sign_in_layout)
-                .setEmailButtonId(R.id.email_button)
-                .setGoogleButtonId(R.id.google_button)
-                .build();
-
-        List<AuthUI.IdpConfig> providers = Arrays.asList(
-                new AuthUI.IdpConfig.EmailBuilder().build(),
+    private void launchGoogleSignIn() {
+        List<AuthUI.IdpConfig> providers = List.of(
                 new AuthUI.IdpConfig.GoogleBuilder().build());
 
         Intent signInIntent = AuthUI.getInstance()
                 .createSignInIntentBuilder()
-                .setAuthMethodPickerLayout(customLayout)
                 .setAvailableProviders(providers)
                 .setTheme(R.style.Theme_Skyfall_NoActionBar)
                 .build();
 
-        signInLauncher.launch(signInIntent);
-    }
-
-    private void onSignInResult(FirebaseAuthUIAuthenticationResult result) {
-        IdpResponse response = result.getIdpResponse();
-
-        if (result.getResultCode() == RESULT_OK) {
-            startActivity(new Intent(this, MainActivity.class));
-            finish();
-        } else {
-            if (response == null) {
-                Toast.makeText(this, "Sign-in canceled.", Toast.LENGTH_SHORT).show();
-                return;
-            }
-
-            if (Objects.requireNonNull(response.getError()).getErrorCode() == ErrorCodes.NO_NETWORK) {
-                Toast.makeText(this, "No internet connection.", Toast.LENGTH_SHORT).show();
-                return;
-            }
-
-            Toast.makeText(this, "Unknown error.", Toast.LENGTH_SHORT).show();
-            Log.e(TAG, "Sign-in error: ", response.getError());
-        }
+        startActivityForResult(signInIntent, RC_GOOGLE_SIGN_IN);
     }
 }
